# tabulate

./: ChangeLog.md  LICENSE  README.md  shell.nix  tabulate.cabal
defaults-src/Tabulate/: DefaultInstances.hs
nodefaults-src/Tabulate/: DefaultInstances.hs
src/: Tabulate.hs
src/Tabulate/: Example.hs  Internal.hs  Types.hs
